# grupo-5

./: README.md
fastapi-base-ds/: mi-db-sqlite.db  pyproject.toml
fastapi-base-ds/src/: exceptions.py  main.py  mi-db-sqlite.db
fastapi-base-ds/src/example/: constants.py  exceptions.py  models.py  router.py  schemas.py  services.py
fastapi-base-ds/tests/: database.py
fastapi-base-ds/tests/example/: test_router.py  test_services.py
mi-app/: index.html  package-lock.json  package.json
mi-app/src/: App.jsx  main.jsx  styles.css
mi-app/src/app/: App.jsx  Router.jsx
mi-app/src/componentes/: CrearProducto.jsx  ModificarProducto.jsx  ProductoDetalle.jsx  ProductoForm.jsx  ProductoList.jsx
mi-app/src/components/: Layout.jsx  ProductoForm.css  ProductoForm.jsx
mi-app/src/hooks/: useProducto.jsx
mi-app/src/pages/: CrearProducto.jsx  Home.jsx  ModificarProducto.jsx  ProductoDetalle.jsx  ProductoList.jsx
